# asset-depreciator-cli

./: .gitignore  README.md  calculator.py  display.py  merged_for_gpt.md  models.py  project.py  pyproject.toml  storage.py  test_project.py
src/asset_depreciator/: __init__.py  __main__.py  calculator.py  display.py  project.py  storage.py
tests/: conftest.py  test_calculator.py  test_display.py  test_models.py  test_project.py  test_storage.py
